@@ -28,3 +28,8 @@ subscriptions list.
 
 * Fixed small error on mail compose page.
 * Added check for Already Confirmed emails. This is to prevent user clicking optin email link multiple time.
+
+********************************Version 1.4************************************************************
+
+* Scheduled published posts issue has been fixed (From this version onwards, Notification emails will be triggered for scheduled posts)
+* Bulk update option for subscribers group in admin view subscribers page.
